replace igv-jupyterlab

--- a/2-gatk_vd.ipynb
+++ b/2-gatk_vd.ipynb
@@ -308,34 +308,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "igv = IGV(genome=\"hg19\" )\n",
-    "display(igv)\n",
-    "import time\n",
-    "time.sleep(3)\n",
-    "\n",
-    "\n",
-    "t2 = igv.create_track(\n",
-    "        name= \"mother HC debug BAM\",\n",
-    "        url= edugen_bucket + \"bam/motherHCdebug.bam\",\n",
-    "        index_url= edugen_bucket + \"bam/motherHCdebug.bai\",\n",
-    "        indexed= True,\n",
-    "        showSoftClips=True,\n",
-    "        colorBy=\"tag\",\n",
-    "        colorByTag= \"HC\",\n",
-    "        sortByTag= \"RG\",\n",
-    "        visibilityWindow= 1000\n",
-    ")\n",
-    "t3 = igv.create_track(\n",
-    "        name= \"mother HC VCF\",\n",
-    "        url= edugen_bucket + \"motherHC.g.vcf.gz\",\n",
-    "        index_url= edugen_bucket + \"motherHC.g.vcf.gz.tbi\",\n",
-    "        indexed= True,\n",
-    "        visibilityWindow= 1000\n",
-    ")\n",
-    "igv.load_track(t2)\n",
-    "\n",
-    "igv.load_track(t3)\n",
-    "igv.search_locus(\"20\", 10002294, 10002623)"
+    "igv_browser= igv_notebook.Browser(\n",
+    "    {\n",
+    "        \"genome\": \"hg19\",\n",
+    "        \"locus\": \"chr20:10002294-10002623\",\n",
+    "        \"tracks\": [{\n",
+    "            \"name\": \"mother HC debug BAM\",\n",
+    "            \"url\": edugen_bucket + \"bam/motherHCdebug.bam\",\n",
+    "            \"indexURL\": edugen_bucket + \"bam/motherHCdebug.bai\",\n",
+    "            \"format\": \"bam\",\n",
+    "            \"type\": \"alignment\",\n",
+    "            \"showSoftClips\": \"True\",\n",
+    "            \"colorBy\": \"tag\",\n",
+    "            \"colorByTag\": \"HC\",\n",
+    "            \"sortByTag\": \"RG\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"mother HC VCF\",\n",
+    "            \"url\": edugen_bucket + \"motherHC.g.vcf.gz\",\n",
+    "            \"index_url\": edugen_bucket + \"motherHC.g.vcf.gz.tbi\",\n",
+    "        }\n",
+    "        ]\n",
+    "    }\n",
+    ")"
    ]
   },
   {
@@ -462,24 +457,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from igv_jupyterlab import IGV\n",
-    "igv = IGV(genome=\"hg19\" )\n",
-    "display(igv)\n",
-    "import time\n",
-    "time.sleep(3)\n",
-    "\n",
-    "\n",
-    "t3 = igv.create_track(\n",
-    "        name= \"trio VCF\",\n",
-    "        url= edugen_bucket +\"trioGGVCF.vcf.gz\",\n",
-    "        index_url=edugen_bucket +\"trioGGVCF.vcf.gz.tbi\",\n",
-    "        indexed= True,\n",
-    "        visibilityWindow= 1000\n",
-    ")\n",
-    "\n",
-    "igv.load_track(t3)\n",
-    "\n",
-    "igv.search_locus(\"20\", 10002294, 10002623)"
+    "igv_browser= igv_notebook.Browser(\n",
+    "    {\n",
+    "        \"genome\": \"hg19\",\n",
+    "        \"locus\": \"chr20:10002294-10002623\",\n",
+    "        \"tracks\": [{\n",
+    "            \"name\": \"trio VCF\",\n",
+    "            \"url\": edugen_bucket + \"trioGGVCF.vcf.gz\",\n",
+    "            \"indexURL\": edugen_bucket + \"trioGGVCF.vcf.gz.tbi\",\n",
+    "            \"format\": \"vcf\"\n",
+    "        }]\n",
+    "    }\n",
+    ")"
    ]
   },
   {
@@ -557,44 +546,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from igv_jupyterlab import IGV\n",
-    "igv = IGV(genome=\"hg19\" )\n",
-    "display(igv)\n",
-    "import time\n",
-    "time.sleep(3)\n",
-    "\n",
-    "\n",
-    "t1 = igv.create_track(\n",
-    "        name= \"trio GVCF\",\n",
-    "        url= edugen_bucket+\"trioGGVCF.vcf.gz\",\n",
-    "        index_url= edugen_bucket+\"trioGGVCF.vcf.gz.tbi\",\n",
-    "        indexed= True,\n",
-    "        visibilityWindow= 1000\n",
-    ")\n",
-    "\n",
-    "t2 = igv.create_track(\n",
-    "        name= \"trio CGP\",\n",
-    "        url= edugen_bucket+\"trioCGP.vcf.gz\",\n",
-    "        index_url= edugen_bucket+\"trioCGP.vcf.gz.tbi\",\n",
-    "        indexed= True,\n",
-    "        visibilityWindow= 1000\n",
-    ")\n",
-    "\n",
-    "\n",
-    "t3 = igv.create_track(\n",
-    "        name= \"trio CGP gnomad\",\n",
-    "        url= edugen_bucket+\"trioCGP_gnomad.vcf.gz\",\n",
-    "        index_url= edugen_bucket+\"trioCGP_gnomad.vcf.gz.tbi\",\n",
-    "        indexed= True,\n",
-    "        visibilityWindow= 1000\n",
-    ")\n",
-    "\n",
-    "\n",
-    "igv.load_track(t1)\n",
-    "igv.load_track(t2)\n",
-    "igv.load_track(t3)\n",
-    "\n",
-    "igv.search_locus(\"20\", 10002294, 10002623)\n"
+    "igv_browser= igv_notebook.Browser(\n",
+    "    {\n",
+    "        \"genome\": \"hg19\",\n",
+    "        \"locus\": \"chr20:10002294-10002623\",\n",
+    "        \"tracks\": [{\n",
+    "            \"name\": \"trio GVCF\",\n",
+    "            \"url\": edugen_bucket + \"trioGGVCF.vcf.gz\",\n",
+    "            \"index_url\": edugen_bucket + \"trioGGVCF.vcf.gz.tbi\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"trio CGP\",\n",
+    "            \"url\": edugen_bucket + \"trioCGP.vcf.gz\",\n",
+    "            \"index_url\": edugen_bucket + \"trioCGP.vcf.gz.tbi\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"trio CGP gnomad\",\n",
+    "            \"url\": edugen_bucket + \"trioCGP_gnomad.vcf.gz\",\n",
+    "            \"index_url\": edugen_bucket + \"trioCGP_gnomad.vcf.gz.tbi\",\n",
+    "        }\n",
+    "        ]\n",
+    "    }\n",
+    ")"
    ]
   },
   {
