--- a/2-gatk_vd.ipynb
+++ b/2-gatk_vd.ipynb
@@ -10,10 +10,6 @@
     "</div>\n",
     "\n",
     "# Wykrywanie wariantów DNA\n",
-    "\n",
-    "na bazie \n",
-    "https://app.terra.bio/#workspaces/help-gatk/GATKTutorials-Germline-June2019/notebooks/launch/1-gatk-germline-variant-discovery-tutorial.ipynb\n",
-    "\n",
     "<img src=\"png/vd-image1.png\">"
    ]
   },
@@ -27,38 +23,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import os\n",
-    "user_name = os.environ.get('USER')\n",
-    "print(user_name)\n",
     "\n",
-    "workspace = \"/tmp/jovyan/work/git/edugen_pub/\"\n",
+    "workspace = \"/home/jovyan/work/git/edugen_pub/\"\n",
     "os.environ['WORKSPACE'] = workspace\n",
     "! echo ${WORKSPACE}\n",
     "\n",
     "edugen_bucket  = \"gs://biodatageeks/sequila/edugen/\"\n",
     "os.environ['EDUGEN_BUCKET'] = edugen_bucket"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clean_all(): \n",
-    "    ! rm -r sandbox_trio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#clean_all()"
    ]
   },
   {
@@ -89,34 +70,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Wizualizacja BAM i VCF w programie IGV"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Skopiowanie do publicznego kubełka"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! bgzip -c ${WORKSPACE}/sandbox/motherHC.vcf > ${WORKSPACE}/sandbox/motherHC.vcf.gz\n",
-    "! tabix ${WORKSPACE}/sandbox/motherHC.vcf.gz\n",
-    "#! gsutil cp sandbox/motherHC.vcf.gz* gs://bucket-$USER/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!gsutil ls gs://biodatageeks/sequila/edugen/"
+    "## Wizualizacja BAM i VCF w programie IGV\n",
+    "\n",
+    "Najczęciej do wizualizacji danych z uliniowienia (i nie tylko) wykorzystuje się narzedzie IGV - [Integrative Genome Viewer](https://igv.org/doc/desktop/#DownloadPage/). Program ten instalowany jest na komputerze, natomiast na zajęciach skorzystamy z paczki [igv-notebook](https://github.com/igvteam/igv-notebook) która jest pythonową \"owijką\" dla programu igv.js, dlatego też możliwe do użycia opcje i argumenty znajdziemy w [dokumnetacji tego programu](https://igv.org/doc/igvjs/#tracks/Tracks/)."
    ]
   },
   {
@@ -129,7 +85,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import igv_notebook\n",
@@ -164,19 +126,39 @@
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
     "<b>Zadanie 2:</b> Jaka jest zygotyczność dwóch widocznych wariantów? Czy jest ona zgodna z tym co widzimy w odczytach ? \n",
-    "</div>\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Zadanie 3:</b> Kliknij na ikonę edycji track'u z odczytami i zaznacz opcję \"Soft clip reads\". Algorytm mapowania (BWA MEM) zdecydował, że kara za obcięcie odczytów (Soft clipping) będzie mniejsza niż wstawienie insersji/delecji. \n",
-    "</div>\n",
-    "\n"
+    "</div>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Czym jest PL, GQ: https://gatk.broadinstitute.org/hc/en-us/articles/360035890451-Calculation-of-PL-and-GQ-by-HaplotypeCaller-and-GenotypeGVCFs"
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<b>Zadanie 3:</b> Kliknij na ikonę edycji track'u z odczytami i zaznacz opcję \"Soft clip reads\", co widzimy w odczytach?\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Algorytm mapowania (BWA MEM) zdecydował, że kara za obcięcie odczytów (Soft clipping) będzie mniejsza niż wstawienie insersji/delecji.\n",
+    "\n",
+    "Do oceny wiarygodności wariantów wykorzystywany jest \"Phread-scaled Likelihoods of Genotypes\", dokładne omówienie można znaleźć [pod linkiem](https://gatk.broadinstitute.org/hc/en-us/articles/360035890451-Calculation-of-PL-and-GQ-by-HaplotypeCaller-and-GenotypeGVCFs)."
    ]
   },
   {
@@ -214,16 +196,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "Ponieważ jesteśmy zainteresowani jednym miejscem (20:10,002,000-10,003,000) to dokonaliśmy reuliniowienia tylko tego fragmentu. "
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ponieważ jesteśmy zainteresowani jednym miejscem (20:10,002,000-10,003,000) to dokonaliśmy reuliniowienia tylko tego fragmentu. \n",
+    "\n",
     "Po ponownym uliniowieniu zniknęły obcięte odczyty (soft clipped reads) . HaplotypeCaller wykorzystuje odczyty 'soft-clipped' do ponownego uliniowienia. Z analizy odczytów wynika, że insercja i pobliski SNP są ze sobą sfazowane. Wynika z tego, że HaplotypeCaller znalazł różne możliwe uliniowienia po wykonaniu lokalnej reasemblacji. Po reasemblacji występuje wystarczająco dużo odczytów wskazujących na występowanie insercji, która byłaby pominięta w przypadku użycia prostszych algorytmów, nie wykorzystujących reasemblacji (np. UnifiedGenotyper)"
    ]
   },
@@ -244,6 +228,13 @@
     "<b>Zadanie 6*:</b> W jaki sposób wyświetlić w IGV haplotypy utworzone przez HC?\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -297,38 +288,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! bgzip -c ${WORKSPACE}/sandbox/motherHC.g.vcf > ${WORKSPACE}/sandbox/motherHC.g.vcf.gz\n",
-    "! tabix ${WORKSPACE}/sandbox/motherHC.g.vcf.gz\n",
-    "#! gsutil cp sandbox/motherHC.g.vcf* gs://bucket-$USER/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "igv_browser= igv_notebook.Browser(\n",
-    "    {\n",
-    "        \"genome\": \"hg19\",\n",
-    "        \"locus\": \"chr20:10002294-10002623\",\n",
-    "        \"tracks\": [{\n",
-    "            \"name\": \"mother HC debug BAM\",\n",
-    "            \"url\": edugen_bucket + \"bam/motherHCdebug.bam\",\n",
-    "            \"indexURL\": edugen_bucket + \"bam/motherHCdebug.bai\",\n",
-    "            \"format\": \"bam\",\n",
-    "            \"type\": \"alignment\",\n",
-    "            \"showSoftClips\": \"True\",\n",
-    "            \"colorBy\": \"tag\",\n",
-    "            \"colorByTag\": \"HC\",\n",
-    "            \"sortByTag\": \"RG\",\n",
+    "igv_browser= igv_notebook.Browser({\n",
+    "    \"genome\": \"hg19\",\n",
+    "    \"locus\": \"chr20:10002294-10002623\",\n",
+    "    \"tracks\": [{\n",
+    "        \"name\": \"mother HC debug BAM\",\n",
+    "        \"url\": edugen_bucket + \"bam/motherHCdebug.bam\",\n",
+    "        \"indexURL\": edugen_bucket + \"bam/motherHCdebug.bai\",\n",
+    "        \"format\": \"bam\",\n",
+    "        \"type\": \"alignment\",\n",
+    "        \"showSoftClips\": \"True\",\n",
+    "        \"colorBy\": \"tag\",\n",
+    "        \"colorByTag\": \"HC\",\n",
+    "        \"sortByTag\": \"RG\"\n",
     "        },\n",
     "        {\n",
-    "            \"name\": \"mother HC VCF\",\n",
-    "            \"url\": edugen_bucket + \"motherHC.g.vcf.gz\",\n",
-    "            \"index_url\": edugen_bucket + \"motherHC.g.vcf.gz.tbi\",\n",
-    "        }\n",
-    "        ]\n",
+    "        \"name\": \"mother HC VCF\",\n",
+    "        \"url\": edugen_bucket + \"motherHC.g.vcf.gz\",\n",
+    "        \"indexURL\": edugen_bucket + \"motherHC.g.vcf.gz.tbi\",\n",
+    "        \"format\": \"vcf\",\n",
+    "        \"type\": \"variant\"\n",
+    "        }]\n",
     "    }\n",
     ")"
    ]
@@ -357,7 +337,8 @@
    "metadata": {},
    "source": [
     "Jeżeli podejrzymy zawartość gVCF, to zobaczymy, że w kolumnie ALT pojawia się pozycja \\<NON_REF\\>.\n",
-    "Identyfikator PL w kolumnie format oznacza prawdopodobieństwo występowania kolejnych alleli, włączając \\<NON_REF\\>. \n"
+    "Identyfikator PL w kolumnie format oznacza prawdopodobieństwo występowania kolejnych alleli, włączając \\<NON_REF\\>. \n",
+    "***"
    ]
   },
   {
@@ -373,22 +354,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir sandbox_trio\n",
+    "! mkdir sandbox_trio\n",
     "! gatk GenomicsDBImport \\\n",
     "    -V ${WORKSPACE}/gvcf/mother.g.vcf.gz \\\n",
     "    -V ${WORKSPACE}/gvcf/father.g.vcf.gz \\\n",
     "    -V ${WORKSPACE}/gvcf/son.g.vcf.gz \\\n",
     "    --genomicsdb-workspace-path ${WORKSPACE}/sandbox_trio/trio \\\n",
     "    --intervals 20:10,000,000-10,200,000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#! ln -s ${WORKSPACE}/sandbox_trio/ sandbox_trio"
    ]
   },
   {
@@ -447,8 +419,7 @@
    "outputs": [],
    "source": [
     "! bgzip -c ${WORKSPACE}/sandbox/trioGGVCF.vcf > ${WORKSPACE}/sandbox/trioGGVCF.vcf.gz\n",
-    "! tabix ${WORKSPACE}/sandbox/trioGGVCF.vcf.gz\n",
-    "#! gsutil cp sandbox/trioGGVCF.vcf.gz* gs://bucket-$USER/"
+    "! tabix ${WORKSPACE}/sandbox/trioGGVCF.vcf.gz"
    ]
   },
   {
@@ -465,7 +436,8 @@
     "            \"name\": \"trio VCF\",\n",
     "            \"url\": edugen_bucket + \"trioGGVCF.vcf.gz\",\n",
     "            \"indexURL\": edugen_bucket + \"trioGGVCF.vcf.gz.tbi\",\n",
-    "            \"format\": \"vcf\"\n",
+    "            \"format\": \"vcf\",\n",
+    "            \"type\": \"variant\"\n",
     "        }]\n",
     "    }\n",
     ")"
@@ -473,20 +445,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
-    "# Poprawa genotypowania"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import Image\n",
-    "from IPython.core.display import HTML \n",
-    "Image(url= \"https://us.v-cdn.net/5019796/uploads/FileUpload/40/a04b64d7884a07d1b562ead4002c60.jpg\")"
+    "***\n",
+    "# Poprawa genotypowania\n",
+    "Posiadając informację o rodzinie, lub też wykorzystując informacje o znanych genotypach w populacji możemy wyliczyć prawdopodobieństwo a posteriori za pomoca funkcji [CalculateGenotypePosteriors](https://gatk.broadinstitute.org/hc/en-us/articles/360037226592-CalculateGenotypePosteriors) z pakietu GATK. \n",
+    "\n",
+    "<img src=\"png/genotype_refine.jpg\">\n",
+    "\n",
+    "Jeżeli w pliku gVCF mamy informację o próbkach z badania trio, to możemy za pomoca pliku z rodowodem ([w formacie .ped](https://gatk.broadinstitute.org/hc/en-us/articles/360035531972-PED-Pedigree-format)) spróbować poprawić pewnośc genotypowania."
    ]
   },
   {
@@ -503,9 +476,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "***\n",
+    "Możemy również posiłkować się danymi z baz populacyjnych, jak np. baza gnomAD, w tym celu należy jako argument podać plik VCF z częstościami oraz genotypami"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "! gatk CalculateGenotypePosteriors \\\n",
@@ -526,46 +519,53 @@
     "! bgzip -c  ${WORKSPACE}/sandbox/trioCGP.vcf > ${WORKSPACE}/sandbox/trioCGP.vcf.gz\n",
     "! tabix -f ${WORKSPACE}/sandbox/trioCGP.vcf.gz\n",
     "! bgzip -c  ${WORKSPACE}/sandbox/trioCGP_gnomad.vcf > ${WORKSPACE}/sandbox/trioCGP_gnomad.vcf.gz\n",
-    "! tabix -f ${WORKSPACE}/sandbox/trioCGP_gnomad.vcf.gz\n",
-    "#! gsutil cp  ${WORKSPACE}/sandbox/trioGGVCF* gs://bucket-$USER/\n",
-    "#! gsutil cp  ${WORKSPACE}/sandbox/trioCGP* gs://bucket-$USER/\n"
+    "! tabix -f ${WORKSPACE}/sandbox/trioCGP_gnomad.vcf.gz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "W IGV możemy zobaczyć czy poprawa genotypowania przyniosła skutki"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "!gsutil ls ${EDUGEN_BUCKET}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "igv_browser= igv_notebook.Browser(\n",
-    "    {\n",
-    "        \"genome\": \"hg19\",\n",
-    "        \"locus\": \"chr20:10002294-10002623\",\n",
-    "        \"tracks\": [{\n",
-    "            \"name\": \"trio GVCF\",\n",
-    "            \"url\": edugen_bucket + \"trioGGVCF.vcf.gz\",\n",
-    "            \"index_url\": edugen_bucket + \"trioGGVCF.vcf.gz.tbi\",\n",
+    "igv_browser= igv_notebook.Browser({\n",
+    "    \"genome\": \"hg19\",\n",
+    "    \"locus\": \"chr20:10002294-10002623\",\n",
+    "    \"tracks\": [{\n",
+    "        \"name\": \"trio GVCF\",\n",
+    "        \"url\": edugen_bucket + \"trioGGVCF.vcf.gz\",\n",
+    "        \"indexURL\": edugen_bucket + \"trioGGVCF.vcf.gz.tbi\",\n",
+    "        \"format\": \"vcf\",\n",
+    "        \"type\": \"variant\"\n",
     "        },\n",
     "        {\n",
-    "            \"name\": \"trio CGP\",\n",
-    "            \"url\": edugen_bucket + \"trioCGP.vcf.gz\",\n",
-    "            \"index_url\": edugen_bucket + \"trioCGP.vcf.gz.tbi\",\n",
+    "        \"name\": \"trio CGP\",\n",
+    "        \"url\": edugen_bucket + \"trioCGP.vcf.gz\",\n",
+    "        \"indexURL\": edugen_bucket + \"trioCGP.vcf.gz.tbi\",\n",
+    "        \"format\": \"vcf\",\n",
+    "        \"type\": \"variant\"\n",
     "        },\n",
     "        {\n",
-    "            \"name\": \"trio CGP gnomad\",\n",
-    "            \"url\": edugen_bucket + \"trioCGP_gnomad.vcf.gz\",\n",
-    "            \"index_url\": edugen_bucket + \"trioCGP_gnomad.vcf.gz.tbi\",\n",
-    "        }\n",
-    "        ]\n",
+    "        \"name\": \"trio CGP gnomad\",\n",
+    "        \"url\": edugen_bucket + \"trioCGP_gnomad.vcf.gz\",\n",
+    "        \"indexURL\": edugen_bucket + \"trioCGP_gnomad.vcf.gz.tbi\",\n",
+    "        \"format\": \"vcf\",\n",
+    "        \"type\": \"variant\"\n",
+    "        }]\n",
     "    }\n",
     ")"
    ]
@@ -574,6 +574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***\n",
     "CalculateGenotypePosteriors dodaje 3 pozycje do kolumny FORMAT: PP, JL i JP.\n",
     "\n",
     "- Phred-scaled Posterior Probability (PP) basically refines the PL values. It incorporates the prior expectations for the given pedigree and/or population allele frequencies.\n",
@@ -589,7 +590,7 @@
    "source": [
     "from IPython.display import Image\n",
     "from IPython.core.display import HTML \n",
-    "Image(url= \"https://storage.googleapis.com/gatk-tutorials/workshop_1906/2-germline/images/vd-image4.png\")\n"
+    "Image(url= \"https://storage.googleapis.com/gatk-tutorials/workshop_1906/2-germline/images/vd-image4.png\")"
    ]
   },
   {
@@ -600,14 +601,15 @@
    "source": [
     "from IPython.display import Image\n",
     "from IPython.core.display import HTML \n",
-    "Image(url= \"https://storage.googleapis.com/gatk-tutorials/workshop_1906/2-germline/images/vd-image5.png\")\n"
+    "Image(url= \"https://storage.googleapis.com/gatk-tutorials/workshop_1906/2-germline/images/vd-image5.png\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Więcej szczegółów na https://gatk.broadinstitute.org/hc/en-us/articles/360035531432?id=11074"
+    "***\n",
+    "Więcej szczegółów na temat kolejnych kroków które można podjąć w celu polepszenia genotypowania: https://gatk.broadinstitute.org/hc/en-us/articles/360035531432?id=11074"
    ]
   },
   {
@@ -616,6 +618,17 @@
    "source": [
     "# Analiza pokrycia"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": []
   },
   {
    "cell_type": "code",
