--- a/3-vcf_anno.ipynb
+++ b/3-vcf_anno.ipynb
@@ -65,9 +65,9 @@
     "<img src=\"png/Normalizacja.png\">\n",
     "\n",
     "***\n",
-    "Sprawdźmy najpierw czy nasz plik posiada warianty multialleliczne. Możemy użyć do tego funkcji `view` programu `Vt` i przefiltrować plik w poszukiwaniu tych wariantów.\n",
+    "Sprawdźmy najpierw czy nasz plik posiada warianty multialleliczne. Możemy użyć do tego funkcji `view` programu `Vt` i przefiltrować plik w poszukiwaniu tych wariantów (podpowiedź: użyj opcji N_ALLELE).\n",
     "<div class=\"alert alert-block alert-warning\">\n",
-    "    <b>Zadanie:</b> Na podstawie dokumentacji programu Vt wyświetl warianty multialleliczne z próbki <b>sandbox/motherHC.vcf</b> \n",
+    "    <b>Zadanie 1:</b> Na podstawie dokumentacji programu Vt wyświetl warianty multialleliczne z próbki <b>sandbox/motherHC.vcf</b> \n",
     "</div>"
    ]
   },
@@ -105,7 +105,7 @@
     "Narzędziem służącym do manipulowania plikami VCF jest `bcftools`. Program ten posiada <a href=\"https://samtools.github.io/bcftools/bcftools.html\">wiele opcji</a>, możemy na przykład filtrować warianty, wydzielać regiony czy podsumować dane. Na początek porównajmy pliki przed i po obróbce programem Vt.\n",
     "\n",
     "<div class=\"alert alert-block alert-warning\">\n",
-    "    <b>Zadanie 1:</b> Policz ile wariantów znajduje się w plikach <b>motherHC.vcf</b> i <b>motherHC.vt.vcf</b>. Czy w pliku źródłowym były warianty multialleliczne? Użyj poleceń bash - <i>cat</i>, <i>grep</i> i <i>wc</i> \n",
+    "    <b>Zadanie 2:</b> Policz ile wariantów znajduje się w plikach <b>motherHC.vcf</b> i <b>motherHC.vt.vcf</b>. Czy w pliku źródłowym były warianty multialleliczne? Użyj poleceń bash - <i>cat</i>, <i>grep</i> i <i>wc</i> \n",
     "</div>"
    ]
   },
@@ -211,7 +211,7 @@
    "source": [
     "Nastepnie za pomoca argumentu `-o` podajemy miejsce i nazwę pliku wynikowego. W naszym przypadku musimy również użyć argumentu `--force-samples`, ponieważ nasze pliki mają samą nazwę zapisaną w środku pliku VCF.\n",
     "<div class=\"alert alert-block alert-warning\">\n",
-    "    <b>Zadanie 2:</b> Połącz pliki <b>motherHC.vcf</b> i <b>motherHC.vt.vcf</b> w jeden plik VCF. Następnie zbadaj jak wygląda zapis wariantów które zostały znormalizowane.  \n",
+    "    <b>Zadanie 3:</b> Połącz pliki <b>motherHC.vcf</b> i <b>motherHC.vt.vcf</b> w jeden plik VCF. Następnie zbadaj jak wygląda zapis wariantów które zostały znormalizowane.  \n",
     "</div>"
    ]
   },
@@ -225,7 +225,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": []
   },
@@ -237,244 +243,8 @@
     "# Adnotacja plików VCF\n",
     "Nie wszystkie warianty są dla nas interesujące. Znakomita większość z nich to warianty w regionach niekodujących, bądź warianty bez wpływu na kodowane białko. Informacja w plikach VCF które otrzymujemy najczęsciej pozbawiona jest podstawowych danych, np. o nazwie genu w obrębie którego lokalizuje sie dany wariant, rodzaju zmiany, częstości wariantu w populacji itd. Dlatego pliki VCF należy jeszcze zaadnotować. Od nas zależy jakiego rodzaju dane i z jakich baz danych chcemy je pozyskać. Istnieje wiele programów do adnotacji, do najpopularniejszych należą <a href=\"https://doc-openbio.readthedocs.io/projects/annovar/en/latest/\">Annovar</a> oraz <a href=\"http://grch37.ensembl.org/info/docs/tools/vep/index.html\">Variant Effect Predictor</a>.\n",
     "\n",
-    "Na zajęciach możemy skorzystać z dostępu za pomocą [API do VEP](https://grch37.rest.ensembl.org/)"
+    "Na zajęciach możemy skorzystać z przeglądarkowej <a href=\"http://grch37.ensembl.org/Tools/VEP\">wersji VEP</a>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\n",
-      "    {\n",
-      "        \"most_severe_consequence\": \"downstream_gene_variant\",\n",
-      "        \"strand\": 1,\n",
-      "        \"transcript_consequences\": [\n",
-      "            {\n",
-      "                \"biotype\": \"antisense\",\n",
-      "                \"gene_symbol_source\": \"HGNC\",\n",
-      "                \"gene_id\": \"ENSG00000240498\",\n",
-      "                \"impact\": \"MODIFIER\",\n",
-      "                \"transcript_id\": \"ENST00000422420\",\n",
-      "                \"gene_symbol\": \"CDKN2B-AS1\",\n",
-      "                \"hgnc_id\": 34341,\n",
-      "                \"distance\": 4406,\n",
-      "                \"strand\": 1,\n",
-      "                \"consequence_terms\": [\n",
-      "                    \"downstream_gene_variant\"\n",
-      "                ],\n",
-      "                \"variant_allele\": \"C\"\n",
-      "            },\n",
-      "            {\n",
-      "                \"gene_symbol_source\": \"HGNC\",\n",
-      "                \"biotype\": \"antisense\",\n",
-      "                \"gene_id\": \"ENSG00000240498\",\n",
-      "                \"hgnc_id\": 34341,\n",
-      "                \"strand\": 1,\n",
-      "                \"distance\": 4408,\n",
-      "                \"transcript_id\": \"ENST00000428597\",\n",
-      "                \"impact\": \"MODIFIER\",\n",
-      "                \"gene_symbol\": \"CDKN2B-AS1\",\n",
-      "                \"variant_allele\": \"C\",\n",
-      "                \"consequence_terms\": [\n",
-      "                    \"downstream_gene_variant\"\n",
-      "                ]\n",
-      "            },\n",
-      "            {\n",
-      "                \"gene_id\": \"ENSG00000240498\",\n",
-      "                \"biotype\": \"antisense\",\n",
-      "                \"gene_symbol_source\": \"HGNC\",\n",
-      "                \"consequence_terms\": [\n",
-      "                    \"downstream_gene_variant\"\n",
-      "                ],\n",
-      "                \"variant_allele\": \"C\",\n",
-      "                \"transcript_id\": \"ENST00000577551\",\n",
-      "                \"impact\": \"MODIFIER\",\n",
-      "                \"gene_symbol\": \"CDKN2B-AS1\",\n",
-      "                \"hgnc_id\": 34341,\n",
-      "                \"distance\": 4931,\n",
-      "                \"strand\": 1\n",
-      "            },\n",
-      "            {\n",
-      "                \"gene_id\": \"ENSG00000240498\",\n",
-      "                \"gene_symbol_source\": \"HGNC\",\n",
-      "                \"biotype\": \"antisense\",\n",
-      "                \"variant_allele\": \"C\",\n",
-      "                \"consequence_terms\": [\n",
-      "                    \"downstream_gene_variant\"\n",
-      "                ],\n",
-      "                \"distance\": 4857,\n",
-      "                \"strand\": 1,\n",
-      "                \"hgnc_id\": 34341,\n",
-      "                \"gene_symbol\": \"CDKN2B-AS1\",\n",
-      "                \"impact\": \"MODIFIER\",\n",
-      "                \"transcript_id\": \"ENST00000580576\"\n",
-      "            },\n",
-      "            {\n",
-      "                \"hgnc_id\": 34341,\n",
-      "                \"distance\": 4931,\n",
-      "                \"strand\": 1,\n",
-      "                \"impact\": \"MODIFIER\",\n",
-      "                \"gene_symbol\": \"CDKN2B-AS1\",\n",
-      "                \"transcript_id\": \"ENST00000581051\",\n",
-      "                \"variant_allele\": \"C\",\n",
-      "                \"consequence_terms\": [\n",
-      "                    \"downstream_gene_variant\"\n",
-      "                ],\n",
-      "                \"gene_symbol_source\": \"HGNC\",\n",
-      "                \"biotype\": \"antisense\",\n",
-      "                \"gene_id\": \"ENSG00000240498\"\n",
-      "            },\n",
-      "            {\n",
-      "                \"gene_id\": \"ENSG00000240498\",\n",
-      "                \"biotype\": \"antisense\",\n",
-      "                \"gene_symbol_source\": \"HGNC\",\n",
-      "                \"consequence_terms\": [\n",
-      "                    \"downstream_gene_variant\"\n",
-      "                ],\n",
-      "                \"variant_allele\": \"C\",\n",
-      "                \"impact\": \"MODIFIER\",\n",
-      "                \"gene_symbol\": \"CDKN2B-AS1\",\n",
-      "                \"transcript_id\": \"ENST00000582072\",\n",
-      "                \"distance\": 4931,\n",
-      "                \"strand\": 1,\n",
-      "                \"hgnc_id\": 34341\n",
-      "            },\n",
-      "            {\n",
-      "                \"gene_symbol\": \"CDKN2B-AS1\",\n",
-      "                \"impact\": \"MODIFIER\",\n",
-      "                \"transcript_id\": \"ENST00000584020\",\n",
-      "                \"hgnc_id\": 34341,\n",
-      "                \"distance\": 4931,\n",
-      "                \"strand\": 1,\n",
-      "                \"consequence_terms\": [\n",
-      "                    \"downstream_gene_variant\"\n",
-      "                ],\n",
-      "                \"variant_allele\": \"C\",\n",
-      "                \"biotype\": \"antisense\",\n",
-      "                \"gene_symbol_source\": \"HGNC\",\n",
-      "                \"gene_id\": \"ENSG00000240498\"\n",
-      "            },\n",
-      "            {\n",
-      "                \"gene_id\": \"ENSG00000240498\",\n",
-      "                \"gene_symbol_source\": \"HGNC\",\n",
-      "                \"biotype\": \"antisense\",\n",
-      "                \"variant_allele\": \"C\",\n",
-      "                \"consequence_terms\": [\n",
-      "                    \"downstream_gene_variant\"\n",
-      "                ],\n",
-      "                \"hgnc_id\": 34341,\n",
-      "                \"distance\": 4931,\n",
-      "                \"strand\": 1,\n",
-      "                \"transcript_id\": \"ENST00000584637\",\n",
-      "                \"gene_symbol\": \"CDKN2B-AS1\",\n",
-      "                \"impact\": \"MODIFIER\"\n",
-      "            },\n",
-      "            {\n",
-      "                \"variant_allele\": \"C\",\n",
-      "                \"consequence_terms\": [\n",
-      "                    \"downstream_gene_variant\"\n",
-      "                ],\n",
-      "                \"hgnc_id\": 34341,\n",
-      "                \"distance\": 4931,\n",
-      "                \"strand\": 1,\n",
-      "                \"gene_symbol\": \"CDKN2B-AS1\",\n",
-      "                \"impact\": \"MODIFIER\",\n",
-      "                \"transcript_id\": \"ENST00000584816\",\n",
-      "                \"gene_id\": \"ENSG00000240498\",\n",
-      "                \"gene_symbol_source\": \"HGNC\",\n",
-      "                \"biotype\": \"antisense\"\n",
-      "            },\n",
-      "            {\n",
-      "                \"impact\": \"MODIFIER\",\n",
-      "                \"gene_symbol\": \"CDKN2B-AS1\",\n",
-      "                \"transcript_id\": \"ENST00000585267\",\n",
-      "                \"strand\": 1,\n",
-      "                \"distance\": 4959,\n",
-      "                \"hgnc_id\": 34341,\n",
-      "                \"consequence_terms\": [\n",
-      "                    \"downstream_gene_variant\"\n",
-      "                ],\n",
-      "                \"variant_allele\": \"C\",\n",
-      "                \"biotype\": \"antisense\",\n",
-      "                \"gene_symbol_source\": \"HGNC\",\n",
-      "                \"gene_id\": \"ENSG00000240498\"\n",
-      "            }\n",
-      "        ],\n",
-      "        \"assembly_name\": \"GRCh37\",\n",
-      "        \"id\": \"9_22125503_-/C\",\n",
-      "        \"end\": 22125502,\n",
-      "        \"seq_region_name\": \"9\",\n",
-      "        \"allele_string\": \"-/C\",\n",
-      "        \"regulatory_feature_consequences\": [\n",
-      "            {\n",
-      "                \"consequence_terms\": [\n",
-      "                    \"regulatory_region_variant\"\n",
-      "                ],\n",
-      "                \"variant_allele\": \"C\",\n",
-      "                \"regulatory_feature_id\": \"ENSR00002081590\",\n",
-      "                \"impact\": \"MODIFIER\",\n",
-      "                \"biotype\": \"enhancer\"\n",
-      "            }\n",
-      "        ],\n",
-      "        \"start\": 22125503,\n",
-      "        \"input\": \"9 22125503 22125502 -/C 1\"\n",
-      "    }\n",
-      "]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import json, requests, sys\n",
-    " \n",
-    "server = \"https://grch37.rest.ensembl.org\"\n",
-    "ext = \"/vep/human/region/9:22125503-22125502:1/C?\"\n",
-    " \n",
-    "r = requests.get(server+ext, headers={ \"Content-Type\" : \"application/json\"})\n",
-    " \n",
-    "if not r.ok:\n",
-    "  r.raise_for_status()\n",
-    "  sys.exit()\n",
-    " \n",
-    "decoded = r.json()\n",
-    "print(json.dumps(decoded, indent=4))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "    <b>Zadanie 3:</b> Na podstawie dokumentacji stwórz zapytanie do API które pozowli na uzyskanie infomacji o jednej konsekwencji dla wariantu w danej pozycji genomowej.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "    <b>Zadanie 4:</b> Na podstawie dokumentacji stwórz zapytanie które bedzie zwracało najpoważniejsze konsekwencje dla danej pozycji genomowej w każdym genie występującym w danym loci.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
