add VEP API calls

--- a/3-vcf_anno.ipynb
+++ b/3-vcf_anno.ipynb
@@ -211,7 +211,7 @@
    "source": [
     "Nastepnie za pomoca argumentu `-o` podajemy miejsce i nazwę pliku wynikowego. W naszym przypadku musimy również użyć argumentu `--force-samples`, ponieważ nasze pliki mają samą nazwę zapisaną w środku pliku VCF.\n",
     "<div class=\"alert alert-block alert-warning\">\n",
-    "    <b>Zadanie 3:</b> Połącz pliki <b>motherHC.vcf</b> i <b>motherHC.vt.vcf</b> w jeden plik VCF. Następnie zbadaj jak wygląda zapis wariantów które zostały znormalizowane.  \n",
+    "<b>Zadanie 3:</b> Połącz pliki <b>motherHC.vcf</b> i <b>motherHC.vt.vcf</b> w jeden plik VCF. Następnie zbadaj jak wygląda zapis wariantów które zostały znormalizowane.  \n",
     "</div>"
    ]
   },
@@ -243,8 +243,63 @@
     "# Adnotacja plików VCF\n",
     "Nie wszystkie warianty są dla nas interesujące. Znakomita większość z nich to warianty w regionach niekodujących, bądź warianty bez wpływu na kodowane białko. Informacja w plikach VCF które otrzymujemy najczęsciej pozbawiona jest podstawowych danych, np. o nazwie genu w obrębie którego lokalizuje sie dany wariant, rodzaju zmiany, częstości wariantu w populacji itd. Dlatego pliki VCF należy jeszcze zaadnotować. Od nas zależy jakiego rodzaju dane i z jakich baz danych chcemy je pozyskać. Istnieje wiele programów do adnotacji, do najpopularniejszych należą <a href=\"https://doc-openbio.readthedocs.io/projects/annovar/en/latest/\">Annovar</a> oraz <a href=\"http://grch37.ensembl.org/info/docs/tools/vep/index.html\">Variant Effect Predictor</a>.\n",
     "\n",
-    "Na zajęciach możemy skorzystać z przeglądarkowej <a href=\"http://grch37.ensembl.org/Tools/VEP\">wersji VEP</a>"
+    "Na zajęciach możemy skorzystać z dostępu za pomocą [API do VEP](https://grch37.rest.ensembl.org/).\n",
+    "\n",
+    "W [dokumentacji](https://rest.ensembl.org/#VEP) znajdziemy możliwe zapytania wraz z przykładowymi wywołaniami."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json, requests, sys\n",
+    " \n",
+    "server = \"https://grch37.rest.ensembl.org\"\n",
+    "ext = \"/vep/human/region/9:22125503-22125502:1/C?\"\n",
+    " \n",
+    "r = requests.get(server+ext, headers={ \"Content-Type\" : \"application/json\"})\n",
+    " \n",
+    "if not r.ok:\n",
+    "  r.raise_for_status()\n",
+    "  sys.exit()\n",
+    " \n",
+    "decoded = r.json()\n",
+    "print(json.dumps(decoded, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<b>Zadanie 4:</b> Zmodyfikuj zapytanie do API w taki sposób, żeby zwracało tylko jeden wariant z najpoważniesjszymi konsekwencjami dla każdego genu w danym loci\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<b>Zadanie 5*:</b> Wykorzystaj zmodyfikowane zapytanie do API w celu adnotacji wszystkich wariantów w pliku <b>sandbox/motherHC.vt.vcf.gz</b>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
